arrow spacing corrected

--- a/src/components/Fifth/fifth.module.scss
+++ b/src/components/Fifth/fifth.module.scss
@@ -77,7 +77,7 @@
       .leftArrow {
         transform: rotate(90deg);
         width: 0.8586979166666vw;
-        margin-right: 30px;
+        margin-right:  2.760416666666vw;
         filter: invert(0.5);
         cursor: pointer;
       }
@@ -85,7 +85,7 @@
       .rightArrow {
         transform: rotate(-90deg);
         width: 0.8586979166666vw;
-        margin-left: 30px;
+        margin-left:  2.760416666666vw;
         filter: invert(0.5);
         cursor: pointer;
       }
